# formal-languages-first-practicum

./: .travis.yml  CMakeLists.txt  MySet.cpp  MySet.h  RegularExpression.cpp  RegularExpression.h  main.cpp  my_set.cpp  my_set.h  readme.md  tests.cpp  tests.txt
